# Offensive-Rust

./: getprocaddress_spoofing.rs  hide_process_from_taskmgr  iathooking-dll.rs  ldaptest.rs  peparse.rs  rust insecure notes.xlsx  rust regex.docx  rust_insecure.docx
Windows PrivEsc/AlwaysInstallElevated/: Cargo.toml
Windows PrivEsc/AlwaysInstallElevated/src/: main.rs
Windows PrivEsc/Get-Unquoted/: Cargo.toml
Windows PrivEsc/Get-Unquoted/src/: main.rs
command_exec/: Cargo.toml
command_exec/src/: main.rs
iathooking/: Cargo.toml
iathooking/src/: main.rs
pelib/: Cargo.toml
pelib/src/: main.rs
peloader64/: Cargo.toml
peloader64/src/: main.rs
processhollowing/: Cargo.toml
processhollowing/src/: main.rs
redteamtooling/botnet/botnetclient/: main.rs
redteamtooling/botnet/botnetserver/: Cargo.toml  main.rs
redteamtooling/commandexecution/: Cargo.toml  main.rs
redteamtooling/convertbytestosidstring/: Cargo.toml  main.rs
redteamtooling/decodeuac/: Cargo.toml  main.rs
redteamtooling/get-asreproastable/: main.rs
redteamtooling/get-kerberoastable/: Cargo.toml  main.rs
redteamtooling/get-unconstrained/: Cargo.toml  main.rs
redteamtooling/get-usersdescription/: main.rs
redteamtooling/reverseshell/reverseshellclient/: Cargo.toml  main.rs
redteamtooling/reverseshell/reverseshellserver/: main.rs
redteamtooling/usefulsnippets/FillStructureFromArray/: main.rs
shellcode_injection/: Cargo.toml
shellcode_injection/src/: main.rs
toolkit/: Cargo.toml
toolkit/src/: injections.rs  main.rs  peparser64.rs  windows_services.rs
(+4 files in other folders)
