[package]
name = "ldapquery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ldap3 = {version="0.11.3", features = ["gssapi"]}
winapi = {version = "0.3.9", features = ["sddl",
"processthreadsapi","memoryapi"]}
indexmap = "2.1.0"
